[tool.poetry]
name = "monitoramentoviagem"
version = "0.1.0"
description = ""
authors = ["lvgalvaofilho"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.12.1"
pytest = "^8.2.0"
streamlit = "^1.34.0"
matplotlib = "^3.8.4"
scrapy = "^2.11.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
